Favicon and Title Added

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>
+      Order Food Online from India's Best Food Delivery Service | Swiggy
+    </title>
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://media-assets.swiggy.com/portal/m/logo_192x192.png"
+    />
     <link href="./index.css" type="text/css" rel="stylesheet" />
     <link
       rel="stylesheet"
